cmake_minimum_required(VERSION 3.16)
project(test_yolov5)

set(CMAKE_CXX_STANDARD 17)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_executable(test_yolov5 main.cpp)
target_link_libraries( test_yolov5 vitis_ai_library-yolov3 )
target_link_libraries( test_yolov5 vitis_ai_library-dpu_task )
target_link_libraries( test_yolov5 vitis_ai_library-xnnpp )
target_link_libraries( test_yolov5 vitis_ai_library-model_config )
target_link_libraries( test_yolov5 vitis_ai_library-math )
target_link_libraries( test_yolov5 vart-util )
target_link_libraries( test_yolov5 xir )
target_link_libraries( test_yolov5 Threads::Threads )
target_link_libraries( test_yolov5 json-c )
target_link_libraries( test_yolov5 glog )
target_link_libraries( test_yolov5 ${OpenCV_LIBS} )
target_link_libraries( test_yolov5 opencv_core )
target_link_libraries( test_yolov5 opencv_videoio )
target_link_libraries( test_yolov5 opencv_imgproc )
target_link_libraries( test_yolov5 opencv_imgcodecs )
target_link_libraries( test_yolov5 opencv_highgui )
